--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	</div> <!--mid_body-->
 	</div> <!--global_body-->
 	<div id="global_footer">
-	<span id="footer_banner">Template for company form modifier made by <a id="Vern" href="#">Vern</a> in one night give me a raise, J</span>	
+	<span id="footer_banner">Template for company form modifier made by <a id="M" href="#">M</a> in one night</span>	
 	</div> <!--global_footer-->
 </div> <!--global_page-->
 </body>
